# LameMp3

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ccl/ndk/lamemp3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lame-lib.cpp
app/src/main/cpp/libmp3lame/: util.h
app/src/main/java/com/ccl/ndk/lamemp3/: LameUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ccl/ndk/lamemp3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
